rnsc/test_data/integration/error/lexer/directives/unknown_directive_as_first_token.rns
    .unknown_directive HelloWorld
.class_end